--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../unit-4-game/assets/reset.css">
     <link rel="stylesheet" href="../unit-4-game/assets/style.css">
 
+
     <title>Document</title>
 </head>
 <body>
@@ -26,12 +27,16 @@
                         <br>
                         Each time when the game starts, the game will change the values of each crystal. </p>
                 </div>
-            ​
-                <div id="counter">
-                </div>
-            ​
+
                 <div id="winsandlosses">
+                    <div class= "wins">wins:</div>
+                    <div class="losses">losses:</div>
                 </div>
+            ​
+                <div id="randomnum">
+                </div>
+            ​
+                
 
                 <div class="pictures">
                 <img id="crystal1"
@@ -47,11 +52,9 @@
                 <div id="scoretext">
                     Your total score is:
                 </div>
-                <div id="userscore">
-            ​
-                </div>
+
             </div>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="../unit-4-game/assets/java.js"></script>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <script src="../unit-4-game/assets/java.js"></script>       
 </body>
 </html>
